♻️Refactor: 축제 관련 API 리팩토링
* :wrench:Settings: S3 권한 키 변경

* :sparkles:Feat: 페이지 예외처리 코드 작성

* :recycle:Refactor: 축제 관련 API 리팩토링

* :recycle:Refactor: 코드 리뷰 기반 수정사항 반영